--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,24 +12,10 @@ import Card from '../components/Card.astro';
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://docs.astro.build/"
+				href="https://docs.astro.build/getting-started"
 				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				time="5 min"
+				tags={['Getting Started', 'Documentation']}
 			/>
 		</ul>
 	</main>
